# rex-ical

./: README.md  main.py  pyproject.toml
rex_ical/: calendar.py
rex_ical/templates/: index.html
